[build-system]
requires = [
    "setuptools>=64",
    "setuptools_scm>=8",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "pylunar"
authors = [
    {name = "Michael Reuter", email = "mareuternh@gmail.com"}
]
description = "Information for completing the Astronomical League's Lunar and Lunar II observing programs."
readme = "README.rst"
license = "BSD-3-Clause"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "ephem"
]

[project.urls]
Documentation = "http://pylunar.readthedocs.io"
Repository = "https://github.com/mareuter/pylunar"

[project.optional-dependencies]
dev = [
    "pylunar[build,docs,lint,test]",
    "scriv",
    "tox",
    "tox-uv>=1.29.0",
]
test = [
    "coverage[toml]",
    "pytest"
]
lint = [
    "pre-commit"
]
build = [
    "build",
    "twine"
]
docs = [
    "sphinx",
    "sphinx_rtd_theme"
]

[tool.setuptools_scm]

[tool.ruff]
exclude = [
    "docs/**",
    "scripts/startup.py"

]
lint.ignore = [
    "D104"
]
lint.select = [
    "B",
    "D",
    "E",
    "F",
    "I",
    "SIM",
    "UP",
    "W"
]
line-length = 110

[tool.ruff.lint.per-file-ignores]
"src/pylunar/__init__.py" = [
    "E402",
    "F401",
    "F403"
]
"tests/**" = [
    "D101",
    "D102",
    "D103",
]

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pycodestyle]
max-doc-length = 79

[tool.mypy]
ignore_missing_imports = true

[tool.numpydoc_validation]
checks = [
    "all",   # report on all checks, except the below
    "EX01",
    "SA01",
    "ES01",
    "GL01",
    "SS05"
]
exclude = [
    "test_*",
    "__init__",
    "conf",
    "startup"
]

[tool.scriv]
entry_title_template = "{{ version }} ({{ date.strftime('%Y-%m-%d') }})"
output_file = "HISTORY.${config:format}"
rst_header_chars = "+^"
